[tool.poetry]
name = "advertisement-sevice"
version = "0.1.0"
description = ""
authors = ["SemyonF <Falaleevmay@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.12"
sqlalchemy = "^2.0.40"
fastapi = "^0.115.12"
asyncpg = "^0.30.0"
alembic = "^1.15.2"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"